# pb_template

./: CMakeLists.txt  README.md  main.cc
protos/: CMakeLists.txt  centers.proto  example.proto  features.proto
